DT-2355 folder page cut off fix

--- a/less/fork-woods.less
+++ b/less/fork-woods.less
@@ -108,6 +108,11 @@ h1 {
     }
 }
 
+.navigation-list .navigation-item:last-child .navigation-list--children {
+   left: initial;
+   right: 0;
+}
+
 .navigation-item .item-name:hover,
 .navigation-item.selected > .item-name {
     box-shadow: none!important;
